@@ -9,4 +9,4 @@
 set CLASSPATH=./lib/mcreator.jar;./lib/*
 
 :: launch MCreator with bundled java
-"./jdk/bin/java.exe" net.mcreator.Launcher
+"./jdk/bin/java.exe" --add-opens=java.base/java.lang=ALL-UNNAMED net.mcreator.Launcher
